# hfst-import-test5

./: AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  PortIndex.quick  README  THANKS  configure.ac  hfst.pc.in
branches/hfst2-stable/: Makefile.am  configure.ac
branches/hfst2-stable/hfst-tools/: Makefile.am
branches/hfst2-stable/hfst-tools/hfst-lexc/: ChangeLog  Makefile.am  configure.ac
branches/hfst2-stable/hfst-tools/hfst-twolc/: configure.ac
branches/hfst2-stable/hfst-tools/src/: Makefile.am  hfst-compiler.h  hfst-lookup.cc  hfst-omor-evaluate.cc
branches/hfst2-stable/hfst-tools/test/: Makefile.am
branches/hfst2-stable/hfst2/: Makefile.am  configure.ac
branches/hfst2-stable/hfst2/ofst/: fst_intersecting_compose.h
branches/hfst2-stable/hfst2/sfst/: compact.h  fst-lex.C  hsfst.C  read_runtime_transducer.h
branches/stable-2.0/hfst2/: README  configure.ac
branches/stable-2.0/hfst2/ofst/: hofst.C  hwfst-lookup.C  hwfst-lookup.h  is-empty-intersection.h
branches/stable-2.0/hfst2/regexp/: xre_lex.ll
branches/stable-2.0/hfst2/sfst/: alphabet.C  fst-lex.C  lowmem.h  operators.C  tokenize_functions.C
hfst-ataq/: Makefile.am  README  ataq.cc  configure.ac  hfst-ataq.1  main.cc
hfst-proc/test/: Makefile.am  tests
hfst-tools/hfst-lexc/: Makefile.am  NEWS  THANKS
hfst-tools/hfst-lexc/doc/: Doxyconf.in  Makefile.in
hfst-tools/hfst-lexc/man/: hfst-lexc.1
hfst-tools/hfst-lexc/po/: en@boldquot.po
hfst-tools/hfst-lexc/src/: flex-utils.cc  lexc-lexer.ll  lexc-parser.yy  lexc.cc  lexc.h  lexcio.cc  string-munging.cc  xducer.cc  xducer.h  xymbol.cc
hfst-tools/hfst-lexc/test/: basic.comments.pair-test  basic.empty-sides.pair-test  basic.escapes.pair-test  basic.infostrings.pair-test  basic.multi-entry-lines.pair-test  basic.multi-file.pair-test  basic.string-pairs.pair-test  basic.two-lexicons.pair-test  hlexc.weights.pair-test  valgrind.medium.hlexc  xre.any-variations.pair-test  xre.definitions.pair-test  xre.sharp.pair-test  xre.star-plus-optional.pair-test
hfst-tools/hfst-lexc/test/divvun-sme/: Makefile.am
hfst-tools/hfst-lexc/test/kos83/: Makefile.am  twol.hlexc
hfst-tools/hfst-lexc/test/morphalou/: empty.hlexc
hfst-tools/hfst-lexc/test/omorfi/: Makefile.am
hfst-tools/hfst-twolc/src/: CommandLineParser.h  CompileUtilities.h  InputReader.cc  InputReader.h  LeftArrowRule.h  Makefile.am  RuleCompiler.cc  RuleModifier.cc  RuleModifier.h  VariableContainer.cc  htwolcpre.yy  htwolcpre3.yy  rule_parts.cc  scanner2.ll  scanner3.ll  string_manipulation.cc
hfst-tools/test/binary-tools/: Makefile.am  concatenate.txt  symbol_table1  tr_epsilons_removed.txt  tr_minimized.txt
hfst/hfst-tools/: configure.ac
hfst/hfst-tools/hfst-lexc/: configure.ac
hfst/hfst-tools/hfst-lexc/src/: lexc.cc  xymbol-bridges.cc
hfst/hfst-tools/hfst-lexc/test/: Makefile.am  a.hfst  basic.colons.pair-test  basic.zeros-epsilons.pair-test
hfst/hfst-tools/hfst-twolc/src/: CompileUtilities.cc  htwolcpre.yy  scanner.ll
hfst/hfst-tools/hfst-twolc/test/: GrammarTest22.cc  GrammarTest57.cc  GrammarTest6.cc  GrammarTest9.cc  WeightedGrammarTest16.cc  test_grammar1  test_grammar1.txt_fst  test_grammar11.txt_fst  test_grammar12.txt_fst  test_grammar13.txt_fst  test_grammar17.txt_fst  test_grammar2.txt_fst  test_grammar20.txt_fst  test_grammar21.txt_fst  test_grammar23.txt_fst  test_grammar24.txt_fst  test_grammar27.txt_fst  test_grammar29.txt_fst  test_grammar3.txt_fst  test_grammar30.txt_fst  test_grammar32.txt_fst  test_grammar35.txt_fst  test_grammar38.txt_fst  test_grammar40.txt_fst  test_grammar43.txt_fst  test_grammar45.txt_fst  test_grammar46.txt_fst  test_grammar47  test_grammar48.txt_fst  test_grammar49.txt_fst  test_grammar5.txt_fst  test_grammar51.txt_fst  test_grammar52.txt_fst  test_grammar57.txt_fst  test_grammar58.txt_fst  test_grammar59.txt_fst  test_grammar6.txt_fst  test_grammar7.txt_fst  test_grammar8.txt_fst  (+1 more)
hfst/hfst-tools/src/: FlagDiacritics.cc  FlagDiacritics.h  Makefile.am  hfst-compose-intersect.cc  hfst-compose.cc  hfst-diff-test.cc  hfst-flag-diacritics.cc  hfst-fst2strings.cc  hfst-lookup-optimize.cc  hfst-lookup.cc  hfst-optimized-lookup.cc  hfst-optimized-lookup.h  hfst-proc.cc  hfst-substitute.cc
hfst/hfst-tools/test/: Makefile.am  animals_pairstring  cat2dog.output  regexp2
libhfst/: configure.ac
libhfst/src/implementations/: ConvertFomaTransducer.cc  HfstConstantTransducer.cc  SfstTransducer.cc  TropicalWeightTransducer.cc
libhfst/src/parsers/: lexc-lexer.ll  xre_lex.ll  xre_parse.yy
trunk/hfst/: BUGS  Makefile.am  NEWS  THANKS  configure.ac
trunk/hfst-ataq/: AUTHORS  Makefile.am  NEWS  hfst-ataq.hh  requirements-specification-tests.sh
trunk/hfst-proc/: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
trunk/hfst-proc/man/: Makefile.am
trunk/hfst-proc/src/: Makefile.am  applicators.cc  applicators.h  formatter.cc  formatter.h  hfst-optimized-lookup.cc  hfst-optimized-lookup.h  hfst-proc-extra.cc  hfst-proc-extra.h  hfst-proc.cc  hfst-proc.h  lookup-path.cc  lookup-path.h  lookup-state.cc  lookup-state.h  tokenizer.cc  tokenizer.h  transducer.cc  transducer.h
trunk/hfst-proc/test/: tests
trunk/hfst-proc/transducers/: capitalization-test-gen.hfst.ol  capitalization-test.hfst.ol  fd-test.lexc
trunk/hfst-tools/hfst-twolc/: configure.ac
trunk/hfst-tools/test/: Makefile.am  cat_symbols
trunk/hfst/hfst-tools/: ChangeLog  configure.ac
trunk/hfst/hfst2/: Makefile.am  configure.ac
trunk/hfst3_proposition/: Doxyfile  HfstApply.cc  HfstInputStream.cc  HfstOutputStream.cc  HfstTransducer.cc  HfstTransducer.h  Makefile  Makefile.am  apply_schemas.h  configure.ac  hfst_proc.cc  hfst_proc.h  test.cc
trunk/hfst3_proposition/implementations/: ConvertTransducerFormat.cc  ConvertTransducerFormat.h  FomaTransducer.cc  FomaTransducer.h  GlobalSymbolTable.h  HfstExceptions.h  HfstTokenizer.cc  HfstTokenizer.h  LogWeightTransducer.cc  LogWeightTransducer.h  Makefile  SfstTransducer.cc  SfstTransducer.h  SymbolDefs.cc  SymbolDefs.h  TropicalWeightTransducer.cc  TropicalWeightTransducer.h
trunk/hfst3_proposition/tools/: configure.ac
(+2247 files in other folders)
