AC_INIT([hfst], [2.4.1])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_SUBDIRS([hfst2 hfst-tools])

LIBHFST_NAME=hfst
LIBHFST_MAJOR=2
LIBHFST_MINOR=4
LIBHFST_EXTENSION=.1
LIBHFST_VERSION=$LIBHFST_MAJOR.$LIBHFST_MINOR$LIBHFST_EXTENSION
AC_SUBST(LIBHFST_MAJOR)
AC_SUBST(LIBHFST_MINOR)
AC_SUBST(LIBHFST_VERSION)
AC_SUBST(LIBHFST_NAME)

# We check the libs to include for pkg-config
AC_CHECK_LIB([m], [main])
AC_CHECK_LIB([pthread], [main])

AC_OUTPUT([Makefile hfst.pc])

