## Process this file with autoconf to produce configure script
AC_INIT([hfst], [3.0])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_SUBDIRS([libhfst tools])

# Versioning of hfst-package; relevant for package naming
HFST_NAME=hfst
HFST_MAJOR=3
HFST_MINOR=0
HFST_EXTENSION=_alpha
HFST_VERSION=$HFST_MAJOR.$HFST_MINOR$HFST_EXTENSION

AC_OUTPUT([Makefile])

